[package]
name = "uamutations"
version = "0.1.0"
authors = ["Mark Padgham <mark.padgham@email.com>"]
edition = "2021"
repository = "https://github.com/UrbanAnalyst/uamutations"
license = "MIT"
description = "Implementation of the mutation algorithm for Urban Analyst."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
kdtree = "0.7.0"
ndarray = "0.15.6"
pca = "0.1.4"
serde_json = "1.0"
